--- a/app/views/pages/product.ejs
+++ b/app/views/pages/product.ejs
@@ -1,7 +1,7 @@
-<section class="product">
+<section class="product">	
 	<section class="product__introduction">
 	<h2 class="product__introductionTitle">
-		<span class="accentColor">+</span>Spuce C8
+		<span class="accentColor">+</span>Healthy Chip 1.0
 		<hr class="product__introductionDecorline">
 	</h2>
 	<div class="product__introductionSlider">
@@ -9,9 +9,11 @@
 	</div>
 	</section>
 
+
 	<section class="product__description">
 		<h2 class="product__descriptionTitle">Descriptif</h2>
-		<p class="product__descriptionText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam massa nibh, eleifend ut lacinia id, fringilla nec velit. Vestibulum nunc ligula, tincidunt sit amet volutpat sit amet, condimentum congue urna. Sed fermentum iaculis tortor, aliquam rhoncus leo dignissim non.
+		<p class="product__descriptionText">La première puce connectée d’Improve fournie des fonctionnalités et des données très avancées : suivi de l’activité physique, analyse sanguines en temps réel, détections précoces des problèmes de santé, contrôle des besoins du corps. L’application envoie des push notifications pour donner des conseils santé, informer l’utilisateur de ses progrès, prise de rendez-vous.
+
 		</p>
 		<h2 class="product__descriptionTitle">Quantité</h2>
 		<div class="product__buttonQuantity first-button">-</div>
@@ -20,6 +22,34 @@
 		<h2 class="product__descriptionTitle">Prix</h2>
 		<p class="product__price">999 €</p>
 		<button class="product__register">S'inscrire</button>
+		<p class="product__textOpacity">Healthy Chip</p>
+	</section>
+		
+	
+	<div>	
+		<div class="product__socialNetwork">
+			<ul>
+				<li><img src="img/logo-facebook.png"></li>
+				<li><img src="img/logo-twitter.png"></li>
+				<li><img src="img/logo-instagram.png"></li>
+			</ul>
+		</div>	
+		<a href="#" class="product__showCaracteristique">Voir plus de caractéristiques</a>	
+		<hr class="product__separation">
+	</div>	
+
+	<section class="product__caracteristique">
+		<h2 class="product__caracteristiqueTitle">Caractéristiques<br> <span class="accentColor">&</span> détails</h2>
+		<img src="img/puce-improve--details.png">
+		<p class="product__caracteristiqueTexte">La puce Healty Chip de Improve est le mélange d'une montre connectée et du bracelet santé, sous forme de puce de façon à avoir des informations de santé très poussées. Grâce à ce bracelet, vous allez pouvoir améliorer votre hygiène de vie très facilement et bénéficier d’avantages très intéressants tels que des mutuelles de santé moins chères, des taux de prêt plus faibles, etc. De plus, si vous avez des antécédants familiaux de santé, la puce va permettre de contrer et de prévenir des risques dès l’apparition des premiers indicateurs invisibles et indolores de façon à ne plus subir de traitement de santé lourd. 
+		</p>
+	</section>
+
+	<section class="product__fonctionnalites">
+		<h2 class="product__fonctionnalitesTitle">Fonctionnalités<br> <span class="accentColor">&</span> fiche technique</h2>
+		<img src="img/puce-fonctionnalites.png">
+		<div class="product__verticalLine"></div>
+		<p class="product__fonctionnalitesTexte">Notifications des sms<br>Notification du calendrier de rendez-vous médicaux<br>Distance parcouru dans la journée avec itinéraire<br>Nombre de pas effectué<br>Suivi automatique du sommeil<br>Analyse sanguine en temps réel<br>Suivi physique<br><br>Couleur : Chair<br>Taille : 1cmx1cm<br>Epaisseur : 0,3mm<br>Autonomie : 10 ans<br>Marque : Improve<br></p>
 	</section>
 
 </section>
