[home:tpl] Update class and logic

--- a/app/views/pages/home.ejs
+++ b/app/views/pages/home.ejs
@@ -32,55 +32,50 @@
     </div>
   </div>
 </header>
-<section class='how'>
-  <h3 class='how__title'>Comment ça marche ?</h3>
-  <div class='slider'>
-    <picture>
-    <picture>
-    <picture>
-    <div class='sliderPoint'></div>
-    <div class='sliderPoint'></div>
-    <div class='sliderPoint'></div>
-  </div>
-  <div class='how__sep'>
-    <div class='plusIcon'>
-      <div class='plusIcon__horizontalBar'></div>
-      <div class='plusIcon__verticalBar'></div>
+<section class='slide'>
+  <h3 class='slide__title'>Comment ça marche ?</h3>
+  <div class='slide__content'>
+    <div class='slide__slider'>
+        <div class='slider__controlPoint'></div>
+        <div class='slider__controlPoint'></div>
+        <div class='slider__controlPoint'></div>
     </div>
-  </div>
-  <p class='how__explanationText'>
-    Le Lorem Ipsum est simplement du faux texte
-    employé dans la composition et la mise en page avant impression.
-     Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500,
-      quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser
-       un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles,
-        mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en
-         soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles
-          Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son
-          inclusion dans des
-    applications de mise en page de texte, comme Aldus PageMaker.
-  </p>
-</section>
-
-<section class='explore'>
-  <h3 class='explore__title'>Explorer</h3>
-  <h4 class='explore__subtitle'>ET LES POINTS FORTS ?</h4>
-  <div class='explore__visuel'>
-    <div class='explore__visuelbg'>
+    <div class='slide__sep'>
       <div class='plusIcon'>
         <div class='plusIcon__horizontalBar'></div>
         <div class='plusIcon__verticalBar'></div>
       </div>
     </div>
-    <div class='explore__visuelapp'></div>
+    <ol class='slide__list'>
+      <li class='slide__listItem'>Consulter son état de santé grâce à un carnet de santé virtuel</li>
+      <li class='slide__listItem'>Recevoir des conseils personnalisés de nutritionnistes pour améliorer son régime alimentaire</li>
+      <li class='slide__listItem'>Suivre son état physique et anticiper les problèmes de santé liés aux antécédents génétiques</li>
+      <li class='slide__listItem'>Partenaire de mutuelles santé et de banque pour négocier</li>
+      <li class='slide__listItem'>Anticipation des pathologies chroniques responsables de 70% des coûts de santé. Grâce à cette puce, nous pouvons prévenir des maladies avant de devoir faire subir aux individus des traitements lourds et coûteux.</li>
+    </ol>
   </div>
-  <ol class='explore__list'>
-    <li class='explore__listItem'>Suivre son état de santé grâce à un carnet de santé virtuel</li>
-    <li class='explore__listItem'>Recevoir des conseils personnalisés pour rester en forme</li>
-    <li class='explore__listItem'>Automatiser la prise de rendez-vous chez le médecin</li>
-    <li class='explore__listItem'>Anticiper les problèmes de santé liés à la génétique</li>
-    <li class='explore__listItem'>Alerte lorsque votre corps subis d'importants effets négatif (UV...)</li>
-    <li class='explore__listItem'>Proposition chaque jours d'exercices les plus bénéfiques pour vous</li>
-  </ol>
-    <h3 class='explore__sideTitle'>APPLICATION</h3>
+</section>
+
+<section class='slide slide--left'>
+  <h3 class='slide__title'>Application</h3>
+  <div class='slide__content'>
+    <div class='slide__slider'>
+        <div class='slider__controlPoint'></div>
+        <div class='slider__controlPoint'></div>
+        <div class='slider__controlPoint'></div>
+    </div>
+    <div class='slide__sep'>
+      <div class='plusIcon'>
+        <div class='plusIcon__horizontalBar'></div>
+        <div class='plusIcon__verticalBar'></div>
+      </div>
+    </div>
+    <ol class='slide__list'>
+      <li class='slide__listItem'>Suivre son état de santé grâce à un carnet de santé virtuel</li>
+      <li class='slide__listItem'>Recevoir des conseils personnalisés pour rester en forme</li>
+      <li class='slide__listItem'>Automatiser la prise de rendez-vous chez le médecin</li>
+      <li class='slide__listItem'>Anticiper les problèmes de santé liés à la génétique</li>
+      <li class='slide__listItem'>Alerte lorsque vous êtes en plein soleil et que vous subissez les effets négatifs des UV sur votre peau</li>
+    </ol>
+  </div>
 </section>
