[survey:tpl] Add result slide

--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -54,7 +54,7 @@
     <button data-next='4' class='survey__questionValidation'>Suivant</button>
   </article>
 
-  <article  data-question='4' class='survey__question survey__question--profile'>
+  <article data-question='4' class='survey__question survey__question--profile'>
     <div class='survey__wizard'>
       <div class='survey__wizardCurrent'>04</div>
       <hr class='survey__wizardSep'>
@@ -88,6 +88,43 @@
         </ul>
       </div>
     </section>
-    <button data-next='6' class='survey__questionValidation'>Suivant</button>
+    <button data-next='result' class='survey__questionValidation'>Suivant</button>
+  </article>
+
+  <article data-question='5' class='survey__result'>
+    <div class='survey__resultCatchContainer'>
+      <h2 class='survey__resultCatch'>6,3</h2>
+      <h4 class='survey__resultCatchDescription'>LÉGER SURPOIDS</h4>
+   </div>
+    <div class='survey__indices'>
+      <div class='survey__IndicesItem'>
+        <div class='survey__IndicesNum'>25,7</div>
+        <div class='survey__IndicesDesc'>IMC</div>
+      </div>
+      <div class='survey__IndicesItem'>
+        <div class='survey__IndicesNum'>20,1</div>
+        <div class='survey__IndicesDesc'>IMG</div>
+      </div>
+      <div class='survey__IndicesItem'>
+        <div class='survey__IndicesDesc'></div>
+      </div>
+    </div>
+    <div class='survey__avantages'>
+      <div class='survey__avantageItem'>
+        <div class='survey__avantageNum'>86%</div>
+        <div class='survey__avantageDesc'>des utilisateurs de la puce ont optimisé leur IMC en moiins de 3 mois</div>
+      </div>
+      <div class='survey__avantageItem'>
+        <div class='survey__avantageNum'>99%</div>
+        <div class='survey__avantageDesc'>des utilisateurs sont satisfaits de leur puce improve</div>
+      </div>
+      <div class='survey__avantageItem'>
+        <div class='survey__avantageNum'>67%</div>
+        <div class='survey__avantageDesc'>des utilisateurs pensent que la puce improve a radicalement changer leur vie</div>
+      </div>
+    </div>
+    <button class='survey__questionValidation'><a href='/'>Suivant</a></button>
+    </section>
+    <button data-next='result' class='survey__questionValidation'>Suivant</button>
   </article>
 </section>
