[global:footer] creat footer

--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,4 +1,27 @@
         <footer>
+        	<section class="footer__container">
+				<div class="footer__topBar"></div>
+				<div class="footer__content">
+					<ul class="footer__leftItems">
+						<li><img src="img/logo-improve--black.png"></li>
+						<li><p class="footer__newsletter">Newsletter</p></li>
+						<li><input class="footer__inputMail" type="mail" placeholder="Votre adresse e-mail"></li>
+					</ul>
+					<ul>
+						<li><p class="footer__topItem">Menu</p></li>
+						<li><p class="footer__item">Technologie</p></li>
+						<li><p class="footer__item">Puce</p></li>
+						<li><p class="footer__item">Actualités</p></li>
+						<li><p class="footer__item">FAQ</p></li>
+					</ul>
+					<ul>
+						<li><p class="footer__topItem">Social</p></li>
+						<li><p class="footer__item">Facebook</p></li>
+						<li><p class="footer__item">Twitter</p></li>
+						<li><p class="footer__item">Instagram</p></li>
+					</ul>
+				</div>
+        	</section>
         </footer>
     </body>
 </html>
