[product:tpl] Add button

--- a/app/views/pages/product.ejs
+++ b/app/views/pages/product.ejs
@@ -9,7 +9,6 @@
 	</div>
 	</section>
 
-
 	<section class="product__description">
 		<h2 class="product__descriptionTitle">Descriptif</h2>
 		<p class="product__descriptionText">La première puce connectée d’Improve fournie des fonctionnalités et des données très avancées : suivi de l’activité physique, analyse sanguines en temps réel, détections précoces des problèmes de santé, contrôle des besoins du corps. L’application envoie des push notifications pour donner des conseils santé, informer l’utilisateur de ses progrès, prise de rendez-vous.
@@ -22,10 +21,9 @@
 		<h2 class="product__descriptionTitle">Prix</h2>
 		<p class="product__price">999 €</p>
 		<button class="product__register">S'inscrire</button>
-		<p class="product__textOpacity">Healthy Chip</p>
+		<p class="product__textOpacity"><span class="accentColor">+</span>Healthy Chip</p>
 	</section>
 		
-	
 	<div>	
 		<div class="product__socialNetwork">
 			<ul>
