[product:scss] custom button

--- a/public/scss/product-block1.scss
+++ b/public/scss/product-block1.scss
@@ -120,7 +120,8 @@
     margin: auto;
     text-align: center;
     font-size: 30px;
-    font-weight: normal;  
+    font-weight: normal; 
+    cursor: pointer; 
 }
 
 .product__buttonQuantity.first-button{
