[survey:tpl] Update result slide

--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -91,28 +91,28 @@
     <button data-next='result' class='survey__questionValidation'>Suivant</button>
   </article>
 
-  <article data-question='5' class='survey__result'>
+  <article class='survey__result'>
     <div class='survey__resultCatchContainer'>
       <h2 class='survey__resultCatch'>6,3</h2>
-      <h4 class='survey__resultCatchDescription'>LÉGER SURPOIDS</h4>
+      <h4 class='survey__resultCatchDesc'>LÉGER SURPOIDS</h4>
    </div>
     <div class='survey__indices'>
-      <div class='survey__IndicesItem'>
-        <div class='survey__IndicesNum'>25,7</div>
-        <div class='survey__IndicesDesc'>IMC</div>
+      <div class='survey__indicesItem'>
+        <div class='survey__indicesNum'>25,7</div>
+        <div class='survey__indicesDesc'>IMC</div>
       </div>
-      <div class='survey__IndicesItem'>
-        <div class='survey__IndicesNum'>20,1</div>
-        <div class='survey__IndicesDesc'>IMG</div>
+      <div class='survey__indicesItem'>
+        <div class='survey__indicesNum'>20,1</div>
+        <div class='survey__indicesDesc'>IMG</div>
       </div>
-      <div class='survey__IndicesItem'>
-        <div class='survey__IndicesDesc'></div>
+      <div class='survey__indicesItem'>
+        <div class='survey__indicesDesc'>😣</div>
       </div>
     </div>
     <div class='survey__avantages'>
       <div class='survey__avantageItem'>
         <div class='survey__avantageNum'>86%</div>
-        <div class='survey__avantageDesc'>des utilisateurs de la puce ont optimisé leur IMC en moiins de 3 mois</div>
+        <div class='survey__avantageDesc'>des utilisateurs de la puce ont optimisé leur IMC en moins de 3 mois</div>
       </div>
       <div class='survey__avantageItem'>
         <div class='survey__avantageNum'>99%</div>
@@ -123,8 +123,6 @@
         <div class='survey__avantageDesc'>des utilisateurs pensent que la puce improve a radicalement changer leur vie</div>
       </div>
     </div>
-    <button class='survey__questionValidation'><a href='/'>Suivant</a></button>
-    </section>
-    <button data-next='result' class='survey__questionValidation'>Suivant</button>
+    <button class='survey__questionValidation'><a href='/'>Découvrir</a></button>
   </article>
 </section>
