[survey:fix] Fix url and positioning

--- a/app/views/pages/survey.ejs
+++ b/app/views/pages/survey.ejs
@@ -123,6 +123,6 @@
         <div class='survey__avantageDesc'>des utilisateurs pensent que la puce improve a radicalement changer leur vie</div>
       </div>
     </div>
-    <button class='survey__questionValidation'><a href='/'>Découvrir</a></button>
+    <button class='survey__questionValidation'><a href='/home'>Découvrir</a></button>
   </article>
 </section>
