--- a/public/scss/page/survey.scss
+++ b/public/scss/page/survey.scss
@@ -142,7 +142,7 @@
   width: 125px;
   border-radius: 50%;
   align-self: center;
-  position: absolute;
+  position: relative;
   bottom: -4vh;
   font-family: "Helvetica", Arial, sans-serif;
   font-size: 24px;
