[home:tpl] Fix slider classes

--- a/app/views/pages/home.ejs
+++ b/app/views/pages/home.ejs
@@ -35,12 +35,12 @@
 <section class='slide'>
   <h3 class='slide__title'>Comment ça marche ?</h3>
   <div class='slide__content'>
-    <div class='slide__slider'>
-      <div class='slider_slide slider_slide--active'></div>
-      <div class='slider_slide'></div>
-      <div class='slider_slide'></div>
-      <div class='slide__controls'>
-        <div data-slide='1' class='slider__controlPoint'></div>
+    <div class='slider'>
+      <div class='slider__slide slider__slide--active'></div>
+      <div class='slider__slide'></div>
+      <div class='slider__slide'></div>
+      <div class='slider__controls'>
+        <div data-slide='1' class='slider__controlPoint slider__controlPoint--active'></div>
         <div data-slide='2' class='slider__controlPoint'></div>
         <div data-slide='3' class='slider__controlPoint'></div>
       </div>
@@ -64,16 +64,16 @@
 <section class='slide slide--left'>
   <h3 class='slide__title'>Application</h3>
   <div class='slide__content'>
-  <div class='slide__slider'>
-    <div class='slider_slides slider_slide--active'></div>
-    <div class='slider_slides'></div>
-    <div class='slider_slides'></div>
-    <div class='slide__controls'>
-      <div data-slide='1' class='slider__controlPoint'></div>
-      <div data-slide='2' class='slider__controlPoint'></div>
-      <div data-slide='3' class='slider__controlPoint'></div>
+    <div class='slider'>
+      <div class='slider__slide slider__slide--active'></div>
+      <div class='slider__slide'></div>
+      <div class='slider__slide'></div>
+      <div class='slider__controls'>
+        <div data-slide='1' class='slider__controlPoint slider__controlPoint--active'></div>
+        <div data-slide='2' class='slider__controlPoint'></div>
+        <div data-slide='3' class='slider__controlPoint'></div>
+      </div>
     </div>
-  </div>
     <div class='slide__sep'>
       <div class='plusIcon'>
         <div class='plusIcon__horizontalBar'></div>
