[home:all] Add live data

--- a/app/views/pages/home.ejs
+++ b/app/views/pages/home.ejs
@@ -6,7 +6,9 @@
     </div>
     <div class='exemple__pointTextContainer'>
       <div class='exemple__liveChartTitle'>Taux de CO<sub>2</sub></div>
-      <div class='exemple__liveChart'></div>
+      <div class='exemple__liveChart'>
+          35.6
+      </div>
     </div>
   </div>
 
@@ -17,7 +19,9 @@
     </div>
     <div class='exemple__pointTextContainer'>
       <div class='exemple__liveChartTitle'>Battements de <span class='heart'>❤</span></div>
-      <div class='exemple__liveChart'></div>
+      <div class='exemple__liveChart'>
+          35.6
+      </div>
     </div>
   </div>
 
@@ -28,7 +32,9 @@
     </div>
     <div class='exemple__pointTextContainer'>
       <div class='exemple__liveChartTitle'>Taux d'oxigène</div>
-      <div class='exemple__liveChart'></div>
+      <div class='exemple__liveChart'>
+          35.6
+      </div>
     </div>
   </div>
 </header>
