--- a/public/scss/page/home/exemple.scss
+++ b/public/scss/page/home/exemple.scss
@@ -56,6 +56,7 @@
       height: 150px;
       transition: translateY(0);
       padding-top: 5px;
+      opacity: 1;
 
       @include medium {
         height: 130px;
@@ -66,14 +67,18 @@
 .exemple__pointTextContainer {
   width: 100vw;
   position: absolute;
-  text-align: center;
   background-color: rgba(255,255,255,0.9);
   padding-top: 0px;
   height: 0px;
+  opacity: 0;
   transition: translateY(-100px);
   overflow: hidden;
   z-index: 1;
   transition: all ease 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 
   & .plusIcon {
     width: 20px;
@@ -93,14 +98,14 @@
   }
 
   @include medium {
-    width: 30vw;
-    height: 0;
+    width: 15vw;
+    height: 0px;
   }
 }
 
 .exemple__liveChartTitle {
   font-family: "Helvetica neue", Arial, sans-serif;
-  font-size: 24px;
+  font-size: 36px;
 
   sub {
     font-size: smaller;
@@ -108,6 +113,10 @@
   }
 }
 
+.exemple__liveChart {
+  font-size: 36px;
+  align-self: center;
+}
 
 
 .exemple__point--lefthand {
